[project]
name = "fa-test-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "egorzh",email = "egor2001zhukov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
